--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -79,7 +79,7 @@ body {
     'Droid Sans',
     'Helvetica Neue',
     sans-serif; */
-  font-size: 16px;
+  font-size: 16px !important;
   /* text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; */
